# wagtailquickcreate

./: .coverage  .gitignore  MANIFEST.in  README.md  runtests.py  setup.cfg  setup.py  views.py  wagtail_hooks.py
.circleci/: config.yml
.github/workflows/: main.yml  test.yaml
docs/: CONTRIBUTING.md
templates/wagtail_quick_create/: create.html
wagtailquickcreate/: tests.py  views.py  wagtail_hooks.py
wagtailquickcreate/templates/wagtailquickcreate/: create.html  panel.html
wagtailquickcreate/tests/: settings.py  tests.py  urls.py
wagtailquickcreate/tests/fixtures/: test.json
wagtailquickcreate/tests/standardpages/: models.py
wagtailquickcreate/tests/standardpages/migrations/: 0001_initial.py
