[metadata]
description-file = README.md

[flake8]
ignore = C901,W503
exclude = */migrations/*,*/node_modules/*
max-line-length = 120

[isort]
known_first_party=wagtailautocreate
known_django=django
known_wagtail=wagtail,modelcluster
skip=migrations,node_modules,venv
sections=STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section=THIRDPARTY
